[gd_scene load_steps=4 format=3 uid="uid://bbvyjtr37rsg8"]

[ext_resource type="Script" path="res://addons/kuikka_terrain_gen/ui/terrain_generator_mml_ui.gd" id="1_8jyb3"]
[ext_resource type="Script" path="res://addons/kuikka_terrain_gen/ui/areas_ui_handler.gd" id="2_odsjw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3khto"]
bg_color = Color(0.270588, 0.309804, 0.372549, 1)
border_width_left = 4
border_width_top = 4
border_color = Color(0.141176, 0.180392, 0.227451, 1)

[node name="TerrainGeneratorMML" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8jyb3")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="CenterContainer"]
layout_mode = 2

[node name="LeftSide" type="MarginContainer" parent="CenterContainer/HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HSplitContainer/LeftSide"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Show overlay"

[node name="CheckButton" type="CheckButton" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
layout_mode = 2
text = "Height Data Files"

[node name="HeightmapList" type="LineEdit" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HmapFileDialog" type="FileDialog" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/HeightmapList"]
unique_name_in_owner = true
title = "Open File(s)"
size = Vector2i(299, 159)
ok_button_text = "Avaa"
file_mode = 1
access = 2
use_native_dialog = true

[node name="SelectHeightDataFiles" type="Button" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
layout_mode = 2
text = "Open Files"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
layout_mode = 2
text = "Terrain Feature Files"

[node name="TerrainDataList" type="LineEdit" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TerrainFileDialog" type="FileDialog" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/TerrainDataList"]
unique_name_in_owner = true
title = "Open File(s)"
size = Vector2i(299, 159)
ok_button_text = "Avaa"
file_mode = 1
access = 2
use_native_dialog = true

[node name="SelectTerrainDataFiles" type="Button" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
layout_mode = 2
text = "Open Files"

[node name="Label3" type="Label" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
layout_mode = 2
text = "Generation seed"

[node name="LineEdit" type="LineEdit" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
layout_mode = 2
text = "0"

[node name="Label4" type="Label" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
layout_mode = 2
text = "Map size"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "W"

[node name="SpinBoxMapWidth" type="SpinBox" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 2048.0
value = 512.0
allow_greater = true

[node name="Label2" type="Label" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "H"

[node name="SpinBoxMapHeight" type="SpinBox" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 2048.0
value = 512.0
allow_greater = true

[node name="Label5" type="Label" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
layout_mode = 2
text = "Terrain Level"

[node name="SpinBox" type="SpinBox" parent="CenterContainer/HSplitContainer/LeftSide/VBoxContainer"]
layout_mode = 2
min_value = 0.5
max_value = 1.0
step = 0.001
value = 0.5

[node name="RightSide" type="CenterContainer" parent="CenterContainer/HSplitContainer"]
layout_mode = 2

[node name="HeightmapOutput" type="VBoxContainer" parent="CenterContainer/HSplitContainer/RightSide"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/HSplitContainer/RightSide/HeightmapOutput"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 10

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CenterContainer/HSplitContainer/RightSide/HeightmapOutput/MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="CenterContainer/HSplitContainer/RightSide/HeightmapOutput/MarginContainer/AspectRatioContainer"]
self_modulate = Color(0.247059, 0.309804, 0.52549, 0.431373)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3khto")

[node name="HmapTextureRect" type="TextureRect" parent="CenterContainer/HSplitContainer/RightSide/HeightmapOutput/MarginContainer/AspectRatioContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 512)
layout_mode = 2

[node name="AreasOverlay" type="Control" parent="CenterContainer/HSplitContainer/RightSide/HeightmapOutput/MarginContainer/AspectRatioContainer/HmapTextureRect"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
anchors_preset = 0
offset_right = 512.0
offset_bottom = 512.0
script = ExtResource("2_odsjw")

[node name="Textures" type="Control" parent="CenterContainer/HSplitContainer/RightSide/HeightmapOutput/MarginContainer/AspectRatioContainer/HmapTextureRect/AreasOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HSplitContainer/RightSide/HeightmapOutput/MarginContainer/AspectRatioContainer/HmapTextureRect/AreasOverlay"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
offset_right = 30.0
offset_bottom = 30.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CenterContainer/HSplitContainer/RightSide/HeightmapOutput"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HSplitContainer/RightSide/HeightmapOutput/AspectRatioContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="CenterContainer/HSplitContainer/RightSide/HeightmapOutput/AspectRatioContainer/HBoxContainer"]
layout_mode = 2
text = "Generate Heightmap
"

[node name="ExportButton" type="Button" parent="CenterContainer/HSplitContainer/RightSide/HeightmapOutput/AspectRatioContainer/HBoxContainer"]
layout_mode = 2
text = "Export as image"

[node name="OptionButton" type="OptionButton" parent="CenterContainer/HSplitContainer/RightSide/HeightmapOutput/AspectRatioContainer/HBoxContainer"]
layout_mode = 2
item_count = 2
popup/item_0/text = "PNG Image"
popup/item_0/id = 0
popup/item_1/text = "JPG Image"
popup/item_1/id = 1

[connection signal="toggled" from="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/HBoxContainer2/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="files_selected" from="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/HeightmapList/HmapFileDialog" to="." method="_on_hmap_file_dialog_files_selected"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/SelectHeightDataFiles" to="." method="_on_select_height_data_files_pressed"]
[connection signal="files_selected" from="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/TerrainDataList/TerrainFileDialog" to="." method="_on_terrain_file_dialog_files_selected"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/SelectTerrainDataFiles" to="." method="_on_select_terrain_data_files_pressed"]
[connection signal="text_changed" from="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="value_changed" from="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/HBoxContainer/SpinBoxMapWidth" to="." method="_on_spin_box_map_width_value_changed"]
[connection signal="value_changed" from="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/HBoxContainer/SpinBoxMapHeight" to="." method="_on_spin_box_map_height_value_changed"]
[connection signal="value_changed" from="CenterContainer/HSplitContainer/LeftSide/VBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/RightSide/HeightmapOutput/AspectRatioContainer/HBoxContainer/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/RightSide/HeightmapOutput/AspectRatioContainer/HBoxContainer/ExportButton" to="." method="_on_export_button_pressed"]
